--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -26,5 +33,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <script src="https://kit.fontawesome.com/5c272bcce3.js" crossorigin="anonymous"></script>
+  <script
+    src="https://kit.fontawesome.com/5c272bcce3.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
